tests/baselines/reference/incompatibleExports1.errors.txt
==== tests/cases/compiler/incompatibleExports1.ts (2 errors) ====
    declare module "foo" { 
        export interface x { a: string } 
        interface y { a: Date }
        export = y;
        ~~~~~~~~~~~
!!! error TS1064: Export assignment not allowed in module with exported element.
    }
     
    declare module "baz" {
        export module a {
            export var b: number;
        }
     
        module c {
            export var c: string;
        }
     
        export = c;
        ~~~~~~~~~~~
!!! error TS1064: Export assignment not allowed in module with exported element.
    }
    